@@ -1,3 +1,10 @@
+Tue Mar 13 09:29:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Bug_4008_Regression_Test.cpp:
+        * tests/run_test.lst:
+        * tests/tests.mpc:
+          New test for bugzilla 4008.
+
 Mon Mar 12 20:22:17 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * include/makeinclude/rules.local.GNU:
